welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:9: error: not found: type color
def faireV(c:color) {setCouleurBrosse(c);avance();marque();avance();gauche();avance();marque();recule();droite();avance();marque();avance();gauche()}
             ^