welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {for (i<-1 to 3) {for (j<-1 to 3) {faireV(Color.YELLOW);faireV(Color.RED);faireV(Color.BLUE);faireV(Color.GREEN);avance(5)};left();avance(5)}}







def faireV(c:color) {setCouleurBrosse(c);avance();marque();avance();gauche();avance();marque();recule();droite();avance();marque();avance();gauche()}
def marque() {baisseBrosse();leveBrosse()}